# antismash

./: .gitignore  .pylintrc  CONTRIBUTING.md  Dockerfile  Makefile  README.md  pyproject.toml  pytest.ini  requirements.txt  run_antismash.py  setup.cfg  setup.py
.github/: CODEOWNERS  no-response.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: pylint_issue_reporter.yml  unwanted_files.yml
NC_010162/: NC_010162.cluster001.gbk  NC_010162.cluster002.gbk  NC_010162.cluster003.gbk  NC_010162.cluster004.gbk  NC_010162.cluster005.gbk  NC_010162.cluster006.gbk  NC_010162.cluster007.gbk  NC_010162.cluster008.gbk  NC_010162.cluster009.gbk  NC_010162.cluster010.gbk  NC_010162.cluster011.gbk  NC_010162.cluster012.gbk  NC_010162.cluster013.gbk  NC_010162.cluster014.gbk  NC_010162.cluster015.gbk  NC_010162.cluster016.gbk  NC_010162.cluster017.gbk  NC_010162.cluster018.gbk  NC_010162.cluster019.gbk  NC_010162.cluster020.gbk  NC_010162.cluster021.gbk  NC_010162.cluster022.gbk  NC_010162.cluster023.gbk  NC_010162.cluster024.gbk  NC_010162.cluster025.gbk  NC_010162.cluster026.gbk  NC_010162.cluster027.gbk  NC_010162.cluster028.gbk  NC_010162.cluster029.gbk  NC_010162.cluster030.gbk  NC_010162.cluster031.gbk  index.html
NC_010162/css/: Makefile  fungi.less  plants.css
NC_010162/js/: jnj.js
NZ_CP016793 Copy (reversed_double_chopped)/: NZ_CP016793 Copy (reversed_double_chopped).gbk  NZ_CP016793 Copy (reversed_double_chopped).json  NZ_CP016793.1.cluster001.gbk  geneclusters.js  index.html
NZ_CP016793 Copy (reversed_double_chopped)/js/: svgene.js
NZ_OBML01000008.1_158230.0_257246.0/: NZ_OBML01000008.1_158230.0_257246.0.gbk  NZ_OBML01000008.1_158230.0_257246.0.json  NZ_OBML01000008.region001.gbk  index.html  regions.js
NZ_OBML01000008.1_158230.0_257246.0/js/: antismash.js
antismash/: __init__.py  __main__.py  custom_typing.py  custom_typing.pyi  download_databases.py  main.py  typing.py  typing.pyi
antismash/common/: __init__.py  all_orfs.py  brawn.py  deprecated.py  errors.py  fasta.py  gff_parser.py  hmmer.py  hmmscan_parser.py  hmmscan_refinement.py  html_renderer.py  json.py  layers.py  logs.py  module_results.py  path.py  pfamdb.py  utils.py  (+4 more)
docker/: instance.cfg  run  run_from_docker  run_from_podman
(+1651 files in other folders)
